--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -88,6 +88,10 @@ body {
             }
         }
     }
+
+    &:last-child {
+        padding-top: 6px;
+    }
 }
 
 .markerControlButtonsSupport {
@@ -155,4 +159,37 @@ body {
             margin: 0 !important;
         }
     }
+}
+
+.markerPositionSupport {
+    .markerPosition {
+        width: 220px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h4 {
+            margin-bottom: 0;
+        }
+
+        .position {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            p {
+                width: 50%;
+                text-align: center;
+                text-transform: uppercase;
+                margin-top: 6px;
+            }
+        }
+    }
+}
+
+.markerArea {
+    min-height: 340px;
 }
